Fix core gutenberg block widths/paddings on small mobile screens

--- a/sass/gutenberg/blocks/_core-columns.scss
+++ b/sass/gutenberg/blocks/_core-columns.scss
@@ -1,23 +1,18 @@
 // Core/columns block
-.wp-block-columns.alignfull {
-  padding-left: var(--padding-container-horizontal);
-  padding-right: var(--padding-container-horizontal);
-}
-
 // Loops to enumerate the classes for columns.
 @for $i from 1 through 9 {
-  .wp-block-columns.columns-#{$i}.alignfull {
+  .wp-block-columns.has-#{$i}-columns.alignfull {
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+    width: 100%;
   }
 
-  .wp-block-columns.columns-#{$i} {
+  .wp-block-columns.has-#{$i}-columns {
     @media (max-width: 900px) {
       display: grid;
       grid-gap: 1em;
       grid-template-columns: repeat(2, 1fr);
-      width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+      width: 100%;
 
       .wp-block-column {
         margin: 0;
