--- a/sass/gutenberg/blocks/_core-paragraph.scss
+++ b/sass/gutenberg/blocks/_core-paragraph.scss
@@ -18,6 +18,6 @@
 
 @media (max-width: $width-grid-base + 40px) {
   .has-background {
-    width: calc(100% - calc(2.375em * 2));
+    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
   }
 }
