--- a/sass/gutenberg/blocks/_core-text-columns.scss
+++ b/sass/gutenberg/blocks/_core-text-columns.scss
@@ -2,22 +2,23 @@
 .wp-block-text-columns.alignfull {
   padding-left: var(--padding-container-horizontal);
   padding-right: var(--padding-container-horizontal);
+  width: 100%;
 }
 
 // Loops to enumerate the classes for columns.
 @for $i from 1 through 9 {
-  .wp-block-text-columns.columns-#{$i}.alignfull {
+  .wp-block-text-columns.has-#{$i}-columns.alignfull {
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+    width: 100%;
   }
 
-  .wp-block-text-columns.columns-#{$i} {
+  .wp-block-text-columns.has-#{$i}-columns {
     @media (max-width: 900px) {
       display: grid;
       grid-gap: 1em;
       grid-template-columns: repeat(2, 1fr);
-      width: calc(100% - calc(var(--padding-container-horizontal) * 2));
+      width: 100%;
 
       .wp-block-column {
         margin: 0;
