--- a/sass/gutenberg/layout/_content.scss
+++ b/sass/gutenberg/layout/_content.scss
@@ -21,7 +21,6 @@
   @media (max-width: $width-max-article + 40px) {
     padding-left: var(--padding-container-horizontal);
     padding-right: var(--padding-container-horizontal);
-    width: calc(100% - calc(var(--padding-container-horizontal) * 2));
 
     &.alignfull {
       padding-left: var(--padding-container-horizontal);
